labos/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: labos
  namespace: default
spec:
  selector:
    app: labos
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
