labos/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: labos
      port:
        number: 8080
